--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie ticket</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="film">
+        <label for="" class="title">Select the Movie</label>
+        <select name="" id="movies">
+            <option value="1">Drishyam<span class="price">$10.00</span></option>
+            <option value="1">The Priest<span class="price">$12.00</span></option>
+            <option value="1">one<span class="price">$10.00</span></option>
+            <option value="1">master<span class="price">$15.00</span></option>
+        </select>
+    </div>
     
 </body>
 </html>
