--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie ticket</title>
+    <!--Css is linked-->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
     <div class="film">
         <label for="" class="title">Select the Movie</label>
         <select name="" id="movies">
@@ -16,6 +18,11 @@
             <option value="1">one<span class="price">$10.00</span></option>
             <option value="1">master<span class="price">$15.00</span></option>
         </select>
+    </div>
+    <div class="Filmdetails">
+        <div class="seat info"></div>
+        <div class="seat info selection"></div>
+        <div class="seats occupied"></div>
     </div>
     
 </body>
