--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!--Movie Name-->
     <div class="film">
         <label for="" class="title">Select the Movie</label>
         <select name="" id="movies">
@@ -24,6 +24,41 @@
         <div class="seat info selection"></div>
         <div class="seats occupied"></div>
     </div>
-    
+    <!--1St row-->
+    <div class="row" id="1">
+        <div class="rnumber" id="1"></div>
+        <div class="seat" id="1"></div>
+        <div class="seat" id="2"></div>
+        <div class="seat" id="3"></div>
+        <div class="seat" id="4"></div>
+        <div class="seat" id="5"></div>
+    </div>
+    <!--2nd row-->
+    <div class="row" id="2">
+        <div class="rnumber" id="2"></div>
+        <div class="seat" id="1"></div>
+        <div class="seat" id="2"></div>
+        <div class="seat" id="3"></div>
+        <div class="seat" id="4"></div>
+        <div class="seat" id="5"></div>
+    </div>
+    <!--3rd row-->
+    <div class="row" id="3">
+        <div class="rnumber" id="3"></div>
+        <div class="seat" id="1"></div>
+        <div class="seat" id="2"></div>
+        <div class="seat" id="3"></div>
+        <div class="seat" id="4"></div>
+        <div class="seat" id="5"></div>
+    </div>
+    <!--4th row-->
+    <div class="row" id="4">
+        <div class="rnumber" id="4"></div>
+        <div class="seat" id="1"></div>
+        <div class="seat" id="2"></div>
+        <div class="seat" id="3"></div>
+        <div class="seat" id="4"></div>
+        <div class="seat" id="5"></div>
+    </div>
 </body>
 </html>
