--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Movie ticket</title>
     <!--Css is linked-->
     <link rel="stylesheet" href="style.css">
+    <!--Script is linked-->
+    <script src="movie.js"></script>
 </head>
 <body>
     <!--Movie Name-->
@@ -73,6 +75,11 @@
             <span>Seats Selected :</span><span class="Total Seats">0</span>
             <span>Total $:</span><span class="total Amount">0</span>
 
+    </div>
+    <div class="">
+        <form action="">
+            <button type="submit" class="button">submit</button>
+        </form>
     </div>
 </body>
 </html>
