--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         </select>
     </div>
     <div >
-        <div class="seat Available"></div>
+        <div class="seat-Available"></div>
         <small>Seats Available</small>
-        <div class="seat selected"></div>
+        <div class="seat-selected"></div>
         <small>Seats Selected</small>
-        <div class="seats occupied"></div>
+        <div class="seats-occupied"></div>
         <small>Seats occupied</small>
     </div>
     <!--1St row-->
