--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="movie.js"></script>
 </head>
 <body>
+    <h1>MOVIE BOOKING PORTAL</h1>
     <!--Movie Name-->
     <div class="film">
         <label for="" class="title">Now Streaming</label>
